--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 <body>
 
-<h2>Hillary Godin</h2>
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Under_construction_animated.gif">
+<center><img src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Under_construction_animated.gif"></center>
 
 </body>
 </html>
